@@ -36,6 +36,7 @@
 #include "icons.h"
 #include "song.h"
 #include "stdactions.h"
+#include "utils.h"
 
 class VolumeSliderEventHandler : public QObject
 {
@@ -74,6 +75,7 @@ TrayItem::TrayItem(MainWindow *p)
 {
 }
 
+#include <QDebug>
 void TrayItem::setup()
 {
     if (!Settings::self()->useSystemTray()) {
@@ -92,11 +94,27 @@ void TrayItem::setup()
     if (trayItem) {
         return;
     }
+
+    Icon icon;
+    #if !defined Q_OS_WIN32 && !defined Q_OS_MAC
+    if (Utils::Unity==Utils::currentDe()) {
+        if (QLatin1String("ubuntu-mono-dark")==QIcon::themeName()) {
+            icon.addFile(":trayicon-mono-light");
+        } else if (QLatin1String("ubuntu-mono-light")==QIcon::themeName()) {
+            icon.addFile(":trayicon-mono-dark");
+        }
+    }
+    #endif
+
     #ifdef ENABLE_KDE_SUPPORT
     trayItem = new KStatusNotifierItem(this);
     trayItem->setCategory(KStatusNotifierItem::ApplicationStatus);
     trayItem->setTitle(i18n("Cantata"));
-    trayItem->setIconByName("cantata");
+    if (icon.isNull()) {
+        trayItem->setIconByName("cantata");
+    } else {
+        trayItem->setIconByPixmap(icon);
+    }
     trayItem->setToolTip("cantata", i18n("Cantata"), QString());
 
     trayItemMenu = new KMenu(0);
@@ -131,7 +149,7 @@ void TrayItem::setup()
     trayItemMenu->addSeparator();
     trayItemMenu->addAction(mw->quitAction);
     trayItem->setContextMenu(trayItemMenu);
-    trayItem->setIcon(Icons::self()->appIcon);
+    trayItem->setIcon(icon.isNull() ? Icons::self()->appIcon : icon);
     trayItem->setToolTip(i18n("Cantata"));
     trayItem->show();
     connect(trayItem, SIGNAL(activated(QSystemTrayIcon::ActivationReason)), this, SLOT(trayItemClicked(QSystemTrayIcon::ActivationReason)));
